--- a/task1/index.html
+++ b/task1/index.html
@@ -3,37 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Webpage</title>
+  <title>Modern Webpage</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>My Webpage</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <button id="darkModeToggle">Toggle Dark Mode</button>
+    <div class="container">
+      <h1>My Webpage</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <button id="darkModeToggle">Dark Mode</button>
+    </div>
   </header>
   <main>
     <section id="about">
-      <h2>About</h2>
-      <p>This is the about section.</p>
+      <div class="container">
+        <h2>About</h2>
+        <p>Welcome to the about section! This page is designed with a modern layout in mind, providing an excellent user experience.</p>
+      </div>
     </section>
     <section id="projects">
-      <h2>Projects</h2>
-      <p>This is the projects section.</p>
+      <div class="container">
+        <h2>Projects</h2>
+        <p>Check out my amazing projects! Each project highlights my expertise in web development and design.</p>
+      </div>
     </section>
     <section id="contact">
-      <h2>Contact</h2>
-      <p>This is the contact section.</p>
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Have any questions or opportunities? Feel free to reach out via the contact section!</p>
+      </div>
     </section>
   </main>
   <footer>
-    <p>&copy; 2024 My Webpage</p>
+    <div class="container">
+      <p>&copy; 2024 My Webpage. All rights reserved.</p>
+    </div>
   </footer>
   <script src="script.js"></script>
 </body>
